--- a/intro/index.html
+++ b/intro/index.html
@@ -1,5 +1,6 @@
 <canvas id="c"></canvas>
 <head>
+    <script src="https://webgl2fundamentals.org/webgl/resources/webgl-utils.js"></script>
     <link rel="stylesheet" href="index.css"/>
 </head>
 <script src="index.js"></script>
