random rectangle webgl2 app

--- a/intro/index.html
+++ b/intro/index.html
@@ -3,4 +3,4 @@
     <script src="https://webgl2fundamentals.org/webgl/resources/webgl-utils.js"></script>
     <link rel="stylesheet" href="index.css"/>
 </head>
-<script src="index.js"></script>
+<script src="index2.js"></script>
