--- a/practice/index.html
+++ b/practice/index.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" src="./index.css">
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
+    <div class="matrix">
+        <table>
+            <tr>
+                <td><input type="number" max="100" min="-100" /></td>
+                <td><input type="number" max="100" min="-100" /></td>
+                <td><input type="number" max="100" min="-100" /></td>
+            </tr>
+            <tr>
+                <td><input type="number" max="100" min="-100" /></td>
+                <td><input type="number" max="100" min="-100" /></td>
+                <td><input type="number" max="100" min="-100" /></td>
+            </tr>
+            <tr>
+                <td><input type="number" max="100" min="-100" /></td>
+                <td><input type="number" max="100" min="-100" /></td>
+                <td><input type="number" max="100" min="-100" /></td>
+            </tr>
+        </table>
+    </div>
     <canvas id="canvas"></canvas>
 </body>
 <script src="https://webgl2fundamentals.org/webgl/resources/webgl-utils.js"></script>
