--- a/practice/index.html
+++ b/practice/index.html
@@ -4,25 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div class="matrix">
+    <div id="matrix">
         <table>
             <tr>
-                <td><input type="number" max="100" min="-100" /></td>
-                <td><input type="number" max="100" min="-100" /></td>
-                <td><input type="number" max="100" min="-100" /></td>
+                <td><input type="number" max="100" min="-100" id="m11" value="1" step='0.02'/></td>
+                <td><input type="number" max="100" min="-100" id="m12" value="0" step='0.02'/></td>
+                <td><input type="number" max="100" min="-100" id="m13" value="0" step='0.02'/></td>
+                <td><input type="number" max="100" min="-100" id="m14" value="0" step='0.02'/></td>
             </tr>
             <tr>
-                <td><input type="number" max="100" min="-100" /></td>
-                <td><input type="number" max="100" min="-100" /></td>
-                <td><input type="number" max="100" min="-100" /></td>
+                <td><input type="number" max="100" min="-100" id="m21" value="0" step='0.02'/></td>
+                <td><input type="number" max="100" min="-100" id="m22" value="1" step='0.02'/></td>
+                <td><input type="number" max="100" min="-100" id="m23" value="0" step='0.02'/></td>
+                <td><input type="number" max="100" min="-100" id="m24" value="0" step='0.02'/></td>
             </tr>
             <tr>
-                <td><input type="number" max="100" min="-100" /></td>
-                <td><input type="number" max="100" min="-100" /></td>
-                <td><input type="number" max="100" min="-100" /></td>
+                <td><input type="number" max="100" min="-100" id="m31" value="0" step='0.02'/></td>
+                <td><input type="number" max="100" min="-100" id="m32" value="0" step='0.02'/></td>
+                <td><input type="number" max="100" min="-100" id="m33" value="1" step='0.02'/></td>
+                <td><input type="number" max="100" min="-100" id="m34" value="0" step='0.02'/></td>
+            </tr>
+
+            <tr>
+                <td><input type="number" max="100" min="-100" id="m41" value="0" step='0.02'/></td>
+                <td><input type="number" max="100" min="-100" id="m42" value="0" step='0.02'/></td>
+                <td><input type="number" max="100" min="-100" id="m43" value="0" step='0.02'/></td>
+                <td><input type="number" max="100" min="-100" id="m44" value="1" step='0.02'/></td>
             </tr>
         </table>
     </div>
